objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Location__c</fullName>
        <formula>IMAGE(

&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; +  BillingStreet + &quot;,&quot;  + BillingCity + &quot;,&quot; +  BillingState +&quot; &amp;zoom=13&amp;size=650x250&amp;markers=color:red|&quot; +  BillingStreet + &quot;,&quot;  + BillingCity + &quot;,&quot; +  BillingState + &quot;&amp;sensor=true&quot;





, &quot;no map available&quot;, 250, 650)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Quip__c</fullName>
        <description>MFG IDO: Used for Account Plan Quip URL</description>
        <label>Account Plan Quip</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account_Priority__c</fullName>
        <formula>IF( ( AnnualRevenue &gt;20000000),&quot;High Priority&quot;, IF(AND( AnnualRevenue &lt; 20000000, AnnualRevenue &gt; 10000000),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Source_Custom__c</fullName>
        <description>This field is used to flip the record type to data.com. It is populated via lead conversion from the Sourced from Data.com (Managed) lead field. Currently not on any layout.</description>
        <label>Account Source Custom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added from Data.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>IF( Overdue_Invoices__c &gt; 0, IMAGE(&apos;/resource/acct_pastdue&apos;, &apos;Past Due&apos;), IMAGE(&apos;/resource/acct_paid&apos;, &apos;Paid in Full&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <defaultValue>Today() +0</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assortment_Total_Minimum__c</fullName>
        <label>Assortment Total Minimum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Family_Members_Data__c</fullName>
        <formula>ENCODED:[treatNullAsNull]{!ID:DandbCompany.FamilyMembers}</formula>
        <label>Number of Business Family Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buying_Relationship__c</fullName>
        <label>Buying Relationship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Outside</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Churn_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Churn Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Opptys__c</fullName>
        <label>Closed Lost Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Opptys__c</fullName>
        <label>Closed Won Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Value__c</fullName>
        <inlineHelpText>This is automatically calculated from closed opportunities.</inlineHelpText>
        <label>Total Sales</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commercial_Segment__c</fullName>
        <label>Commercial Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Innovator</fullName>
                </value>
                <value>
                    <fullName>Follower</fullName>
                </value>
                <value>
                    <fullName>Commodity</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Certifications__c</fullName>
        <label>Competitive Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>SUN</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Revenue_Goal__c</fullName>
        <label>Current Year Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Target__c</fullName>
        <description>Roll-up summary of the &quot;Target&quot; field on any Channel Plan marked as &quot;Active&quot;.</description>
        <label>Current Year Target</label>
        <summarizedField>SFDC_Channel_Account_Plan__c.Target__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Channel_Account_Plan__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Channel_Account_Plan__c.Partner_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <externalId>true</externalId>
        <label>Customer Account #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Index__c</fullName>
        <inlineHelpText>What does this customer think of us?</inlineHelpText>
        <label>Customer Satisfaction Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Extremely Satisfied - Customer Evangelist</fullName>
                </value>
                <value>
                    <fullName>B - Satisfied</fullName>
                </value>
                <value>
                    <fullName>C - Neutral</fullName>
                </value>
                <value>
                    <fullName>D - Dissatisfied - At risk of losing business</fullName>
                </value>
                <value>
                    <fullName>F - Unsatisfactory - Losing Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Value__c</fullName>
        <formula>IF( (Net_Worth__c &gt;2000000),&quot;High Priority&quot;, IF(AND(Net_Worth__c &lt; 2000000, Net_Worth__c &gt; 1000000),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Current_User_Account__c</fullName>
        <formula>IF ($User.DV_PAA__Account_Id__c = Id, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Current User Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Activity__c</fullName>
        <formula>TODAY() -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Field_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the default field service entitlement to use for this account and all of its assets</inlineHelpText>
        <label>Default Field Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default price book for work orders</inlineHelpText>
        <label>Default Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_for_FSL_Snap_Ins__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default for FSL Snap-Ins</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delinquency_Risk_Data__c</fullName>
        <formula>ENCODED:[treatNullAsNull]IF(ISPICKVAL({!ID:DandbCompany.MarketingPreScreen}, &quot;L&quot;), &quot;Low Risk of Delinquency&quot;, 
IF(ISPICKVAL({!ID:DandbCompany.MarketingPreScreen}, &quot;M&quot;), &quot;Medium Risk of Delinquency&quot;, 
IF(ISPICKVAL({!ID:DandbCompany.MarketingPreScreen}, &quot;H&quot;), &quot;High Risk of Delinquency&quot;,&quot;&quot;)))</formula>
        <label>Delinquency Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
        <label>Old Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_For_Extended_Returns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Eligible For Extended Returns</description>
        <inlineHelpText>Eligible For Extended Returns</inlineHelpText>
        <label>Eligible For Extended Returns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_Return_Period__c</fullName>
        <label>Eligible Return Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Free_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Eligible for Free Shipping</description>
        <inlineHelpText>Eligible for Free Shipping</inlineHelpText>
        <label>Eligible for Free Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Assortment_Total_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Assortment Total Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expire_Account_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expire Account Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Former_Account_Name__c</fullName>
        <description>Used to rename the account, but still have it show up in search results under its old name.</description>
        <label>Former Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Business_Name_Data__c</fullName>
        <formula>ENCODED:{!ID:DandbCompany.GlobalUltimateBusinessName}</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_D_U_N_S_Number__c</fullName>
        <description>Pulls over the Global D-U-N-S number to facilitate the Data.com Whitespace report.</description>
        <formula>ENCODED:{!ID:DandbCompany.GlobalUltimateDunsNumber}</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Ultimate D-U-N-S Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Attainment__c</fullName>
        <description>Measure of YTD Revenue vs. Goal</description>
        <formula>YTD_Revenue_Generated__c  /  Current_Year_Revenue_Goal__c</formula>
        <label>% Goal Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industry_Segment__c</fullName>
        <label>Industry Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coating &amp; Inks</fullName>
                </value>
                <value>
                    <fullName>Paper &amp; Packaging</fullName>
                </value>
                <value>
                    <fullName>Specialty Materials</fullName>
                </value>
                <value>
                    <fullName>Textiles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsProgramMember__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Program Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Visit__c</fullName>
        <description>For Salesforce Maps.</description>
        <label>Last Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Year_Revenue_Generated__c</fullName>
        <label>Last Year Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <formula>ENCODED:[treatNullAsNull]{!ID:DandbCompany.Latitude}</formula>
        <label>Latitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Leads_Converted__c, 0)&lt;&gt;0, NULLVALUE(Number_Leads_Total__c, 0)&lt;&gt;0), Number_Leads_Converted__c / Number_Leads_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_To_Opportunity_Close_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(Number_Leads_Converted__c, 0)&lt;&gt;0), Number_Closed_Won_Opportunities__c / Number_Leads_Converted__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead To Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Liabilities__c</fullName>
        <label>Liabilities</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <formula>ENCODED:[treatNullAsNull]{!ID:DandbCompany.Longitude}</formula>
        <label>Longitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Lifecycle__c</fullName>
        <label>Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Evaluate</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>On-board</fullName>
                </value>
                <value>
                    <fullName>Measure</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Maintain</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Risk_Score__c</fullName>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MFG_Key_Record__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MFG Key Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFG_Marketing_Program_Score__c</fullName>
        <label>Marketing Program Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MFG_Onboarding_Completion__c</fullName>
        <label>Onboarding Completion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MFG_Onboarding_None</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>MFG_Onboarding_25</fullName>
                    <label>0 - 25%</label>
                </value>
                <value>
                    <fullName>MFG_Onboarding_25_50</fullName>
                    <label>25 - 50%</label>
                </value>
                <value>
                    <fullName>MFG_Onboarding_50_75</fullName>
                    <label>50 - 75%</label>
                </value>
                <value>
                    <fullName>MFG_Onboarding_100</fullName>
                    <label>75 - 100%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFG_Partner_Agreement_Type__c</fullName>
        <label>Partner Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MFG_Agreement_Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>MFG_Agreement_Special</fullName>
                    <label>Special</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFG_Partner_Tenure__c</fullName>
        <label>Partner Tenure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MFG_Services_Provider__c</fullName>
        <label>Services Provider?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFG_pct_MDF_Used__c</fullName>
        <label>% of MDF Used</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Map_the_Account__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com?q=&quot; &amp; BillingStreet &amp; &quot;%20&quot; &amp; BillingCity &amp; &quot;%20&quot; &amp; BillingState &amp; &quot;%20&quot; &amp; BillingPostalCode, IMAGE(&quot;https://na1.salesforce.com/servlet/servlet.FileDownload?file=015Hr000003iK9m&quot;, &quot;Map Address in Google&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map the Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Order_Amount_for_Free_Shipping__c</fullName>
        <description>Min. Order Amount for Free Shipping</description>
        <inlineHelpText>Min. Order Amount for Free Shipping</inlineHelpText>
        <label>Min. Order Amount for Free Shipping</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <formula>Annual_Income__c+ Personal_Assets__c+ Other_Income__c-Liabilities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed lost opportunities owned by the current partner account</description>
        <label>Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed opportunities owned by the current partner account</description>
        <label>Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed won opportunities owned by the current partner account</description>
        <label>Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads converted by the partner account</description>
        <label>Converted Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads owned by the partner account all time, including converted and active</description>
        <label>Total Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Open_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number open opportunities owned by the current partner account</description>
        <label>Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_Location_Data__c</fullName>
        <formula>ENCODED:[treatNullAsNull]{!ID:DandbCompany.EmployeesHere}</formula>
        <label>Number of Employees - Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Oppty_Value__c</fullName>
        <label>Open Oppty Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Opptys__c</fullName>
        <label>Open Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_vs_Closed_Opportunities__c</fullName>
        <formula>IMAGE(&apos;http://chart.apis.google.com/chart?cht=p3&amp;chs=300x100&amp;chd=t:&apos;+ 
TEXT( Open_Opptys__c ) + &apos;,&apos; + TEXT(Closed_Lost_Opptys__c + Closed_Won_Opptys__c) + 
&apos;&amp;chl=Open (&apos; + TEXT(Open_Opptys__c)+&apos;)|Closed (&apos;+TEXT( Closed_Lost_Opptys__c + Closed_Won_Opptys__c )+&apos;)&amp;chf=bg,s,FFFFFF&apos; 







, &apos;no data available&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Closed Opportunities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_vs_Closed_Won_Opportunities__c</fullName>
        <formula>IMAGE(&apos;http://chart.apis.google.com/chart?chxt=x,y&amp;chxl=1:|Open|Closed Won|0:|0|50000|&apos;+ TEXT(1.5 * MAX( Closed_Won_Value__c , Open_Oppty_Value__c )) +&apos;&amp;cht=bhs&amp;chd=t:&apos;+TEXT( Open_Oppty_Value__c )+&apos;,&apos;+TEXT( Closed_Won_Value__c )+&apos;&amp;chds=0,&apos;+ TEXT(1.5 * MAX( Closed_Won_Value__c , Open_Oppty_Value__c )) +&apos;&amp;chco=236FBD&amp;chls=2.0&amp;chs=300x125&amp;chtt=Opportunity Value ($USD)&apos; 


, &apos;no data available&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Closed Won Opportunities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the customer has defined visiting hours, select them here.</inlineHelpText>
        <label>Operating Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Win_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(Number_Closed_Opportunities__c, 0)&lt;&gt;0), Number_Closed_Won_Opportunities__c / Number_Closed_Opportunities__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Income__c</fullName>
        <label>Other Income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overdue_Invoice_Revenue__c</fullName>
        <label>Overdue Invoice Revenue</label>
        <summarizedField>Invoice_Example__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Example__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overdue_Invoices__c</fullName>
        <label>Overdue Invoices</label>
        <summaryFilterItems>
            <field>Invoice_Example__c.Status__c</field>
            <operation>equals</operation>
            <value>Overdue</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Example__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_AR_Balance__c</fullName>
        <label>Partner AR Balance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>0 to 100 K</fullName>
                </value>
                <value>
                    <fullName>100 to 200 K</fullName>
                </value>
                <value>
                    <fullName>200 K to 300 K</fullName>
                </value>
                <value>
                    <fullName>300 K to 500 K</fullName>
                </value>
                <value>
                    <fullName>500 K +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Account_Plan_Quip__c</fullName>
        <description>URL for the Partner Account Plan Quip document</description>
        <label>Partner Account Plan Quip</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Partner_Certification__c</fullName>
        <label>Partner Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Partner</fullName>
                </value>
                <value>
                    <fullName>Elite Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Geographic_Coverage__c</fullName>
        <label>Partner Geographic Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>LACA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Program_Level__c</fullName>
        <label>Partner Program Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>